--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -1,4 +1,4 @@
-.storybook-button {
+.button {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
   border: 0;
@@ -7,24 +7,45 @@
   display: inline-block;
   line-height: 1;
 }
-.storybook-button--primary {
+
+.button--primary {
+  transition: 0.5s;
   color: white;
-  background-color: #1ea7fd;
+  background-color: #C10000;
+  border: 2px solid #C10000;
 }
-.storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+
+.button--primary:hover {
+  transition: 0.5s;
+  color: #C10000;
+  background-color: white;
 }
-.storybook-button--small {
+
+.button--secondary {
+  transition: 0.5s;
+  color: #C10000;
+  background-color: white;
+  border: 2px solid #C10000;
+}
+
+.button--secondary:hover {
+  transition: 0.5s;
+  color: white;
+  background-color: #C10000;
+  border: 2px solid #C10000;
+}
+
+.button--small {
   font-size: 12px;
   padding: 10px 16px;
 }
-.storybook-button--medium {
+
+.button--medium {
   font-size: 14px;
   padding: 11px 20px;
 }
-.storybook-button--large {
+
+.button--large {
   font-size: 16px;
   padding: 12px 24px;
 }
