--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -4,7 +4,8 @@
   border: 0;
   border-radius: 3em;
   cursor: pointer;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   line-height: 1;
 }
 
@@ -33,6 +34,22 @@
   color: white;
   background-color: #C10000;
   border: 2px solid #C10000;
+}
+
+.button--whatsapp {
+  transition: 0.5s;
+  color: white;
+  background-color: #3A8600;
+  border: 2px solid #3A8600;
+  fill: white;
+}
+
+.button--whatsapp:hover {
+  transition: 0.5s;
+  color: #3A8600;
+  background-color: white;
+  border: 2px solid #3A8600;
+  fill: #3A8600;
 }
 
 .button--small {
